fix run tasks